tests/machine/x/c/pure_global_fold.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/pure_global_fold.c: In function ‘inc’:
/workspace/mochi/tests/machine/x/c/pure_global_fold.c:22:30: error: ‘k’ undeclared (first use in this function)
   22 | int inc(int x) { return (x + k); }
      |                              ^
/workspace/mochi/tests/machine/x/c/pure_global_fold.c:22:30: note: each undeclared identifier is reported only once for each function it appears in

   1: #include <stdio.h>
